--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="الدورة المكثّفة في الكوسمتيكا | إلكسير بيوتي" />
     <meta property="og:description" content="دورة مكثفة في الكوسمتيكا مع شهادة دولية. تعلّمي أساسيات الجلد، الأحماض، بروتوكولات العلاج، وإدارة العيادة." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="src/assets/logo.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta name="twitter:site" content="@elixirbeauty" />
+    <meta name="twitter:image" content="src/assets/logo.jpg" />
+    <link rel="icon" href="src/assets/logo.jpg" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
