fixed title image

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
     <meta property="og:title" content="الدورة المكثّفة في الكوسمتيكا | إلكسير بيوتي" />
     <meta property="og:description" content="دورة مكثفة في الكوسمتيكا مع شهادة دولية. تعلّمي أساسيات الجلد، الأحماض، بروتوكولات العلاج، وإدارة العيادة." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="src/assets/logo.jpg" />
+    <meta property="og:image" content="/logo.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:alt" content="إلكسير بيوتي - الدورة المكثّفة في الكوسمتيكا" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@elixirbeauty" />
-    <meta name="twitter:image" content="src/assets/logo.jpg" />
-    <link rel="icon" href="src/assets/logo.jpg" type="image/x-icon" />
+    <meta name="twitter:image" content="/logo.jpg" />
+    <link rel="icon" href="/logo.jpg" type="image/jpeg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
